# TechProgMIPT

.github/workflows/: main.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp
task2/C/: main.cpp
task3/: CMakeLists.txt
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task4/tests/02-tree/: TreeTestCase.cpp
task6/cmake-with-flask/: Dockerfile
